# cabinet

./: .aider.conf.yml  .env.creds  .gitignore  CABINET.yaml  CABINET.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  README.md  README_BDA.md  README_CONVENTIONS.md  README_SETUP.md  Tiltfile  cabinet.schema.json  conventions_bda_atdd.md  conventions_code_setup.md  conventions_python.md  cookie-cutter.json  copier.yaml  manifest.yaml  pyproject.toml
.github/workflows/: tilt-ci.yaml
features/: accept_hello_world.feature  atdd_apply_container_dependencies.feature  atdd_apply_container_test_deps.feature  atdd_example.feature  atdd_hello_world_site.feature  bda_hello_world.feature  cabinet.feature  configure_hello_world.feature  conftest.py  monitor.feature  ready.feature  test_accept_hello_world.py  test_atdd_apply_container_dependencies.py  test_atdd_apply_container_test_deps.py  test_atdd_example.py  test_atdd_hello_world_site.py  test_atdd_stub.py  test_bda_hello_world.py  test_bda_stub.py  test_cabinet.py  test_configure_hello_world.py  test_monitor.py  test_ready.py
tests/: bda_stub.feature  conftest.py  test_bda_stub.py
