[project]
name = "cabinet"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = ["poethepoet", "pytest-bdd"]

[tool.poe.tasks.dev]
cmd = "pytest -xsm 'atdd or dev and not skip' --tb=short features/"

[tool.poe.tasks.ci]
cmd = "pytest -xsvm 'atdd or ci and not skip' --tb=long features/"

[tool.pytest.ini_options]
markers = [
  "dev",
  "ci",
  "stage",
  "prod",
  "atdd"
]

filterwarnings = [
  "ignore::DeprecationWarning"
]

