[project]
name = "cabinet"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
  "poethepoet",
  "pytest-bdd",
  "httpx",
  "kubernetes"
]

[tool.poe.tasks.dev]
cmd = "pytest -xsm 'accept or dev and not skip' --tb=short features/"

[tool.poe.tasks.ci]
cmd = "pytest -xsvm 'accept or ci and not skip' --tb=long features/"

[tool.pytest.ini_options]
markers = [
  "dev",
  "ci",
  "accept",
  "monitor"
]
filterwarnings = [
  "ignore::DeprecationWarning"
]
